--- a/contact.html
+++ b/contact.html
@@ -49,23 +49,23 @@
                 <a href="index.html">Trang Chủ</a>
                 <a href="product.html">Sản Phẩm</a>
                 <a href="#">Giới Thiệu</a>
-                <a href="#">Liên Hệ</a>
-                <a href="Dashboard.html">administrator</a>
+                <a href="contact.html">Liên Hệ</a>
+                <a href="admin/DashboardH.html">administrator</a>
             </nav>
 
             <div class="icons">
 
                 <i class="fas fa-bars" id="menu-bars"></i>
                 <i class="fas fa-search search" id="search-icon"></i>
-                <a href="#" class="fas fa-heart">
+                <a href="favorite.html" class="fas fa-heart">
                     <span>2</span>
                 </a>
                 <a href="cart.html" class="fas fa-shopping-cart">
                     <span>2</span>
                 </a>
-
+                
                 <li class="fas fa-user-alt drop-menu">
-
+                  
                     <ul>
                         <li>
                             <a href="login.html"><i class="fas fa-sign-in-alt"></i> Đăng Nhập</a>
