--- a/detail.html
+++ b/detail.html
@@ -17,7 +17,9 @@
     <!-- lightSlide.css link -->
     <link rel="stylesheet" href="css/lightSlider.css">
     <!-- boostrap -->
-    <link rel="stylesheet" href="js/bootstrap/bootstrap.min.css">
+      <!-- boostrap -->
+      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
+      integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <!-- jquery  -->
     <script src="js/jQuery.js"></script>
     <!-- lightslider -->
@@ -46,15 +48,15 @@
                 <a href="index.html">Trang Chủ</a>
                 <a href="product.html">Sản Phẩm</a>
                 <a href="#">Giới Thiệu</a>
-                <a href="#">Liên Hệ</a>
-                <a href="Dashboard.html">administrator</a>
+                <a href="contact.html">Liên Hệ</a>
+                <a href="admin/DashboardH.html">administrator</a>
             </nav>
 
             <div class="icons">
 
                 <i class="fas fa-bars" id="menu-bars"></i>
                 <i class="fas fa-search search" id="search-icon"></i>
-                <a href="#" class="fas fa-heart">
+                <a href="favorite.html" class="fas fa-heart">
                     <span>2</span>
                 </a>
                 <a href="cart.html" class="fas fa-shopping-cart">
