--- a/favorite.html
+++ b/favorite.html
@@ -16,9 +16,9 @@
     <link rel="stylesheet" href="css/siteStyle/orderDetailStyle.css">
     <!-- lightSlide.css link -->
     <link rel="stylesheet" href="css/lightSlider.css">
-    <!-- boostrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+      <!-- boostrap -->
+      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
+      integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <!-- jquery  -->
     <script src="js/jQuery.js"></script>
     <!-- lightslider -->
@@ -47,23 +47,23 @@
                 <a href="index.html">Trang Chủ</a>
                 <a href="product.html">Sản Phẩm</a>
                 <a href="#">Giới Thiệu</a>
-                <a href="#">Liên Hệ</a>
-                <a href="Dashboard.html">administrator</a>
+                <a href="contact.html">Liên Hệ</a>
+                <a href="admin/DashboardH.html">administrator</a>
             </nav>
 
             <div class="icons">
 
                 <i class="fas fa-bars" id="menu-bars"></i>
                 <i class="fas fa-search search" id="search-icon"></i>
-                <a href="#" class="fas fa-heart">
+                <a href="favorite.html" class="fas fa-heart">
                     <span>2</span>
                 </a>
                 <a href="cart.html" class="fas fa-shopping-cart">
                     <span>2</span>
                 </a>
-
+                
                 <li class="fas fa-user-alt drop-menu">
-
+                  
                     <ul>
                         <li>
                             <a href="login.html"><i class="fas fa-sign-in-alt"></i> Đăng Nhập</a>
