--- a/account.html
+++ b/account.html
@@ -15,7 +15,8 @@
     <!-- lightSlide.css link -->
     <link rel="stylesheet" href="css/lightSlider.css">
     <!-- boostrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
+        integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <!-- jquery  -->
     <script src="js/jQuery.js"></script>
     <!-- lightslider -->
@@ -58,9 +59,9 @@
                 <a href="cart.html" class="fas fa-shopping-cart">
                     <span>2</span>
                 </a>
-                
+
                 <li class="fas fa-user-alt drop-menu">
-                  
+
                     <ul>
                         <li>
                             <a href="login.html"><i class="fas fa-sign-in-alt"></i> Đăng Nhập</a>
@@ -181,10 +182,16 @@
     <!-- footer section ends -->
 
     <!-- script custom link -->
-    <script src="js/script.js"></script>
-    <!--  -->
-    <script src="js/bootstrap/bootstrap.bundle.min.js"></script>
-    <script src="js/jqueryScript.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+    integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+    crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js"
+    integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF"
+    crossorigin="anonymous"></script>
+<script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
+<script src="js/script.js"></script>
+
+<script src="js/jqueryScript.js"></script>
 </body>
 
 </html>
