--- a/orderDetail.html
+++ b/orderDetail.html
@@ -139,9 +139,11 @@
 
                         </div>
                     </div>
-                    <div class="form-group">
-                        <label for="address">Địa chỉ</label>
-                        <textarea class="form-control" readonly name="address" id="address" rows="3"></textarea>
+                    <div class="col-md-12">
+                        <div class="form-group">
+                          <label for="">Địa chỉ</label>
+                          <textarea readonly class="form-control" name="" id="" rows="3"></textarea>
+                        </div>
                     </div>
 
                 </div>
@@ -168,8 +170,8 @@
                     <td>20.000.đ</td>
                     <td>2</td>
                     <td style="color:var(--main); font-weight: 500;">40.000.đ</td>
-                    <td class="ratting-btn"> <button class="fas fa-star" data-bs-toggle="modal"
-                            data-bs-target="#exampleModal">Đánh giá</button> </td>
+                    <td class="ratting-btn"> <button class="fas fa-star" data-toggle="modal" data-target="#exampleModal">Đánh giá</button> </td>
+                            
                 </tr>
                 <tr>
                     <td>104747</td>
@@ -290,8 +292,8 @@
                     
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Đóng</button>
-                    <button type="button" class="btn btn-primary">Đánh giá</button>
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary">Save changes</button>
                 </div>
             </div>
         </div>
@@ -302,16 +304,13 @@
     <!-- script custom link -->
     <script src="js/script.js"></script>
     <!--  -->
-    <script src="js/bootstrap/bootstrap.bundle.min.js"></script>
+    <!-- <script src="js/bootstrap/bootstrap.bundle.min.js"></script> -->
     <script src="js/jqueryScript.js"></script>
     <script src="js/rating-script.js"></script>
-    <!-- Boostrap 5 js -->
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
-        integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
-        integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
-        crossorigin="anonymous"></script>
+    <!-- Boostrap 4 js -->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
 
 </body>
